<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/coordinates1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6EBFB"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/latitude"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coordinates2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F7FD"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/longitude"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6EBFB"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/address1Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/address1"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/addrline1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F7FD"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/address2Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/address2"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/addrline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/streetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6EBFB"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/streetLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/street"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F7FD"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/layoutLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/city"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/stateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6EBFB"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/state"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/countryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F7FD"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/country"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zipcodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6EBFB"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/zipcodeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/zipcode"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="textCapSentences"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
